--- a/src/main/resources/templates/admin_home.html
+++ b/src/main/resources/templates/admin_home.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>관리자 홈</title>
 </head>
+
 <body>
-    <h3>관리자 홈</h3>
+    <h3>관리자용 홈</h3>
+    <div th:if="${menu == 1 }">
+        <form th:action="@{/admin/restaurant_insert.do}" method="post">
+            <h5>식당등록</h5>
+            <div>
+                <label style="display: inline-block; width: 150px;">사업자번호 : </label>
+                <input type="text" name="crNumber" placeholder="000-00-00000" />
+            </div>
+            <div>
+                <label style="display: inline-block; width: 150px;">상호명 : </label>
+                <input type="text" name="name" placeholder="상호명" />
+            </div>
+            <div>
+                <label style="display: inline-block; width: 150px;">연락처 : </label>
+                <input type="text" name="phone" placeholder="연락처" />
+            </div>
+            <div>
+                <label style="display: inline-block; width: 150px;">주소 : </label>
+                <input type="text" name="address" placeholder="주소" />
+            </div>
+            <div>
+                <label style="display: inline-block; width: 150px;">임시암호 : </label>
+                <input type="text" name="password" value="1234" />
+            </div>
+            <div>
+                <button type="submit">식당등록</button>
+            </div>
+        </form>
+        <hr />
+        <table border="1">
+            <tr th:each="obj : ${list}">
+                <td th:text="${obj.crNumber}"></td>
+                <td th:text="${obj.name}"></td>
+                <td th:text="${obj.phone}"></td>
+                <td th:text="${obj.address}"></td>
+                <td th:text="${obj.regdate}"></td>
+                <td>
+                    <button>삭제</button>
+                    <button>변경</button>
+                </td>
+            </tr>
+        </table>
+
+        <th:block th:each="page : ${#numbers.sequence(1, pages)}">
+            <a th:href="@{/admin/home.do(menu=1,page=${page})}"><button th:text="${page}"></button></a>
+        </th:block>
+    </div>
+
+    <div th:if="${menu == 2}">
+        <h5>임시</h5>
+    </div>
 </body>
+
 </html>
